<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udem.lenguajes2.quiz3.MainActivity" >

    <ImageView
        android:id="@+id/imgMarvelHeroes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgMarvelHeroesDescription"
        android:src="@drawable/img_marvelheroes" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgMarvelHeroes"
        android:hint="@string/hintUserName"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUser"
        android:hint="@string/hintUserPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentRight="true"
        android:text="Join" />

    <Button
        android:id="@+id/btnMainRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_toLeftOf="@+id/btnMainLogin"
        android:text="Register" />
    
</RelativeLayout>
